Fixed select labels not showing on filter panel on mobile.

--- a/src/Asm.MooBank.Web/MooBankApp/src/App.scss
+++ b/src/Asm.MooBank.Web/MooBankApp/src/App.scss
@@ -68,8 +68,9 @@ label {
 
     svg {
         position: absolute;
-        right: 1rem;
+        right: 0.6rem;
         top: calc(1rem - 7px);
+        fill: var(--bs-body-color);
     }
 }
 
